# pdf_research_assistant

./: .env  .gitignore  README.md  aaa.txt  docker-compose.yaml  pyproject.toml  requirements_frontend.txt
backend/: app.py  db.py  entrypoint.sh  injest.py  pdf_to_qdrant.py  qdrant_connector.py  qdrant_connector_hybrid.py  rag.py
data/: urls.txt
database/: init.sql
dockerfiles/: Dockerfile_backend  Dockerfile_frontend
frontend/: app.py
grafana/: dashboard.json  init.py
notebooks/: evaluation_retrieval.ipynb  questions.py  rag_evaluation_results.csv  rag_evaulation.ipynb  sample_questions.csv  tests.ipynb
