[project]
name = "04-pdf-research-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "fastembed>=0.7.1",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "matplotlib>=3.10.5",
    "ollama>=0.5.3",
    "pandas>=2.3.1",
    "pypdf2>=3.0.1",
    "qdrant-client>=1.15.1",
    "requests>=2.32.4",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.48.1",
    "uvicorn>=0.35.0",
]
